# VAN_Engine

./: .clawdia_paths  .gitignore  AgentCollaboration.md  Dockerfile  Investment_Technical_Briefing_Conversation-IDE_on_VAN_Engine.html  MASTER_PROMPT.md  OpenCode.config.example.json  OpenCodeInstructions.md  PRD_MasterSkills.md  PRD_ProjectCatalog_Schema.md  PROJECT_STRUCTURE.md  README.html  SPECIFICATION.html  VanEngine.sln  bootstrap.py  docker-compose.yml  download_styletts2.py  install_styletts2.py  lori-character-prompt.md  requirements_voice_ui.txt  train_voice.py  tts_local.py  voice-server.mjs  voice-start.bat  voice_cloning_ui.py
ClawDia/: ARA_FRACTAL_PROMPT.md  ARA_FRACTAL_SPEC.md  HowToBeGoodAgent_20260606.json  HowToBeGoodAgent_20260606_backup.json  HowToBeGoodAgent_20260607.json  PROMPT_assembly_project.md  deepseek_art_studio.html  main.py  pai_mike_studio.html  post_learnings.ps1  replay_audit.db  requirements.txt  saas_hooks_server.py  saas_portal.html  server_log.txt  sv2.err
ConversationIDE/: HandOver.md  OpenCode.md  README.md  check.bat  electron.vite.config.ts  index.html  overview.html  package.json  tailwind.config.js  temp_test_output.txt  test.html  tsconfig.json  tsconfig.web.json
GeckoShiftServer/: Program.cs
MEMORY/: token_index.db
OeraLindaSimulator_v1.0_Complete/: FIVE_TIER_SPRINT_ROADMAP.md  Program.cs  README.md  SPRINT_IMPLEMENTATION_PLAN.md  (+2 more)
PROJECTS/ChirpChat/desktop/: Cargo.toml  README.md  build.rs
PROJECTS/ChirpChat/desktop/src/: chat.rs  config.rs  lib.rs  main.rs  pairing.rs  protocol.rs  service.rs  transport.rs
(+994 files in other folders)
