[package]
name = "chirpchat-desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "net", "time"] }
tonic = { version = "0.12", features = ["prost"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
